исправлены ошибки тегов

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 <!--Education-->
         <div class="my-education">
     <h3 class="main-content-title">Education</h3>
-    <h4 class="font-size"><span class="my-work-expirients-company">National University of Radioelectronics<span></h4>
+    <h4 class="font-size"><span class="my-work-expirients-company">National University of Radioelectronics</span></h4>
     <h4 class="font-size">Management</h4>
     <p class="my-work-expirients-time">September 2009 - June 2014 <span class="my-work-expirients-divider">|</span> Country</p>
         </div>
@@ -145,6 +145,6 @@
 </div>
 </aside>
 </div>
-</h5>
+
 </body>
 </html>
